basic layout established

--- a/index.html
+++ b/index.html
@@ -1,1 +1,30 @@
-Hello World
+<!DOCTYPE html>
+
+<head>
+    <meta charset="utf-8">
+    <title>phist</title>
+    <link rel="stylesheet" href='style.css'</link>
+</head>
+
+<body>
+    <div class='container'>
+        <header>
+            <div>
+            </div>
+        </header>
+        <div class='main'>
+            <h1>
+                Need development?
+            </h1>
+            <p>
+                My name is Josh Friese. I'm a software developer living
+                 in RDU, North Carolina. I work in Python and Django.
+            </p>
+        </div>
+        <footer>
+            All Rights Reserved. Josh Friese, 2017
+        </footer>
+    </div> <!-- container end -->
+</body>
+
+</html>
