--- a/index.html
+++ b/index.html
@@ -1,30 +1,56 @@
 <!DOCTYPE html>
 
 <head>
-    <meta charset="utf-8">
-    <title>phist</title>
-    <link rel="stylesheet" href='style.css'</link>
+  <meta charset="utf-8">
+  <title>phist</title>
+  <link rel="stylesheet" href='style.css' </link>
 </head>
 
 <body>
-    <div class='container'>
-        <header>
-            <div>
-            </div>
-        </header>
-        <div class='main'>
-            <h1>
-                Need development?
-            </h1>
-            <p>
-                My name is Josh Friese. I'm a software developer living
-                 in RDU, North Carolina. I work in Python and Django.
-            </p>
-        </div>
-        <footer>
-            All Rights Reserved. Josh Friese, 2017
-        </footer>
-    </div> <!-- container end -->
+
+  <div id="sidebar" class="sidebar">
+    <a href="javascript:void(0)" class="closebtn" onclick="closeBar()">&times;</a>
+    <a href="#">About</a>
+    <a href="#">Contact</a>
+  </div>
+
+  <div id="bar">
+    <span style="font-size:30px;cursor:pointer" onclick="openBar()">&#9776;</span>
+  </div>
+
+  <div class='cont'>
+    <div class='main'>
+      <a href='/'><img class='pic' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
+      <div class="block1">
+        <h2>Need development?</h2>
+      <p>
+        My name is Josh Friese. I'm a software developer living in RDU, North Carolina.
+        I work in Python and Django.
+      </p>
+      </div>
+    <div class='main'>
+      <div class='block2'>
+        <h1>Here we go.</h1>
+      </div>
+    </div>
+    </div>
+  </div>
+    <footer>
+      All Rights Reserved. Josh Friese, 2017
+    </footer>
+
+    <script>
+      function openBar() {
+          document.getElementById("sidebar").style.width = "250px";
+          document.getElementById("main").style.marginLeft = "250px";
+      }
+
+      function closeBar() {
+          document.getElementById("sidebar").style.width = "0";
+          document.getElementById("main").style.marginLeft= "0";
+      }
+  </script>
+
 </body>
 
 </html>
