--- a/index.html
+++ b/index.html
@@ -7,18 +7,31 @@
 </head>
 
 <body>
-
+<!-- sidebar crap -->
+<header>
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeBar()">&times;</a>
-    <a href="#">About</a>
-    <a href="#">Contact</a>
+    <a target="_blank"  href="https://twitter.com/jawshology">
+      <img src='https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-64.png'/>
+    </a>
+    <a target="_blank" href="https://facebook.com/jcfriese">
+      <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-64.png"/>
+    </a>
+    <a target="_blank" href="https://github.com/phist210">
+      <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/64/social_media_logo_github-64.png"/>
+    </a>
+    <a href="mailto:joshfriese@gmail.com">
+      <img src="https://cdn4.iconfinder.com/data/icons/black-white-social-media/32/mail_email_envelope_send_message-64.png"/>
+    </a>
   </div>
-
   <div id="bar">
     <span style="font-size:30px;cursor:pointer" onclick="openBar()">&#9776;</span>
   </div>
+</header>
 
+<!-- container -->
   <div class='cont'>
+    <img class='contimg' src='http://i.imgur.com/3PUipws.jpg'/>
     <div class='main'>
       <a href='/'><img class='pic' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
       <div class="block1">
@@ -30,7 +43,7 @@
       </div>
     <div class='main'>
       <div class='block2'>
-        <h1>Here we go.</h1>
+        <h1>Put some shit here.</h1>
       </div>
     </div>
     </div>
