--- a/index.html
+++ b/index.html
@@ -2,24 +2,25 @@
 
 <head>
   <meta charset="utf-8">
-  <title>phist</title>
+  <title>you've reached phist</title>
   <link rel="stylesheet" href='style.css' </link>
+  <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
 </head>
 
 <body>
 <!-- sidebar crap -->
   <div id="sidebar" class="sidebar">
     <a href="javascript:void(0)" class="closebtn" onclick="closeBar()">&times;</a>
-    <a target="_blank"  href="https://twitter.com/jawshology">
+    <a title='Tweet me!' target="_blank"  href="https://twitter.com/jawshology">
       <img src='https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-64.png'/>
     </a>
-    <a target="_blank" href="https://facebook.com/jcfriese">
+    <a title='Facebook!' target="_blank" href="https://facebook.com/jcfriese">
       <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/online_social_media_facebook-64.png"/>
     </a>
-    <a target="_blank" href="https://github.com/phist210">
+    <a title='Github!' target="_blank" href="https://github.com/phist210">
       <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/64/social_media_logo_github-64.png"/>
     </a>
-    <a href="mailto:joshfriese@gmail.com">
+    <a title='Shoot me an email!' href="mailto:joshfriese@gmail.com">
       <img src="https://cdn4.iconfinder.com/data/icons/black-white-social-media/32/mail_email_envelope_send_message-64.png"/>
     </a>
   </div>
@@ -30,7 +31,7 @@
 <!-- container -->
   <div class='cont'>
     <div class='main'>
-      <a href='/'><img class='pic' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
+      <a href='/'><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
       <div class="block1">
         <h2>Need development?</h2>
       <p>
@@ -40,13 +41,15 @@
       </div>
     <div class='main'>
       <div class='block2'>
-        <h1>Put some shit here.</h1>
+        <h1><span class='headline'>My story.</span></h1>
+        <p>I have done this and this and this and this and this and this and this
+           and this and this and this and this and this and this and this and this
+            and this and this and this and this and this and this and this and this.
+        </p>
       </div>
     </div>
     </div>
-
-
-    <footer>
+    <footer class='bottomline'>
       All Rights Reserved. Josh Friese, 2017
     </footer>
 
