--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <title>you've reached phist</title>
   <link rel="stylesheet" href='style.css' </link>
   <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
+  <script src="/Scripts1.js" type="text/javascript"></script>
+  <link href='//fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
 </head>
 
 <body>
@@ -33,7 +35,7 @@
     <div class='main'>
       <a href='/'><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
       <div class="block1">
-        <h2>Need development?</h2>
+        <p class='title'>Need development?</p>
       <p>
         My name is Josh Friese. I'm a software developer living in RDU, North Carolina.
         I work in Python and Django.
@@ -52,18 +54,6 @@
     <footer class='bottomline'>
       All Rights Reserved. Josh Friese, 2017
     </footer>
-
-    <script>
-      function openBar() {
-          document.getElementById("sidebar").style.width = "250px";
-          document.getElementById("main").style.marginLeft = "250px";
-      }
-
-      function closeBar() {
-          document.getElementById("sidebar").style.width = "0";
-          document.getElementById("main").style.marginLeft= "0";
-      }
-  </script>
 
 </body>
 
