--- a/index.html
+++ b/index.html
@@ -44,10 +44,12 @@
     <div class='main'>
       <div class='block2'>
         <h1><span class='headline'>My story</span></h1>
+        <div class="block1">
         <p>When I was about 14 years old, I made my first blog on Tumblr. Around that time, teenagers managing photography blogs was a big thing and I loved every second of it. Tumblr allowed for a great level of expression that I now understand why people that age could spend hours upon hours browsing, posting, reblogging and, most of all, editing their themes. Or maybe that was just me... </p>
         <p>I started messing around heavily with other codes that were being posted around for everyone to use and eventually came upon my own product that I could send for use by other bloggers. Although I didn't fully understand what I was working with, I got a feel for the field of technology, something I've loved since I can remember.</p>
         <p>I now have a refined background in the service industry that came to be when I reached the legal working age. I took the diligent and responsive work ethic from that field and now employ into my work and training as a software developer.
         </p>
+          </div>
       </div>
       <div class='block1'>
         some stuff goes here
