--- a/index.html
+++ b/index.html
@@ -1,50 +1,52 @@
 <!DOCTYPE html>
 
-<head>
-  <meta charset="utf-8">
-  <title>you've reached phist</title>
-  <script src="/Scripts1.js" type="text/javascript"></script>
-  <link rel="stylesheet" href='style.css' </link>
-  <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
-  <link href='//fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'><a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
-</head>
+  <head>
+    <meta charset="utf-8">
+    <title>Josh Friese - Typist</title>
+    <link rel="stylesheet" href='style.css'/>
+    <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
+    <link href='http://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'><a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+  </head>
 
-<body>
-<!-- sidebar crap -->
-  <div id="sidebar" class="sidebar">
-    <a href="javascript:void(0)" class="closebtn" onclick="closeBar()">&times;</a>
-    <a title='Tweet me!' target="_blank"  href="https://twitter.com/jawshology">
-      <img src='https://cdn2.iconfinder.com/data/icons/black-white-social-media/32/twitter_online_social_media-64.png'/>
-    </a>
-    <a title='Github!' target="_blank" href="https://github.com/phist210">
-      <img src="https://cdn2.iconfinder.com/data/icons/black-white-social-media/64/social_media_logo_github-64.png"/>
-    </a>
-    <a title='Shoot me an email!' href="mailto:joshfriese@gmail.com">
-      <img src="https://cdn4.iconfinder.com/data/icons/black-white-social-media/32/mail_email_envelope_send_message-64.png"/>
-    </a>
-  </div>
-  <div id="bar">
-    <span style="font-size:30px;cursor:pointer" onclick="openBar()">&#9776;</span>
-  </div>
+  <body>
+    <!-- start container -->
+    <div class='container'>
 
-<!-- container -->
-  <div class='cont'>
-    <div class='main'>
-      <a href='/'><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
-      <div class="block1">
-        <p class='title'>Need development?</p>
-      <p>
-        My name is Josh Friese. I'm a software developer living in RDU, North Carolina.
-        I work in Python and Django.
-      </p>
+      <div class='main'>
+        <a href='/'><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
+          <p class='title'>Need development?</p>
+        <p style='text-indent: 1em;'>
+          My name is Josh Friese. I like typing, headbanging and all things hoppy. </br></br>
+          Check me out!
+        </p>
       </div>
-    <div class='main'>
-    </div>
-    </div>
-    <footer>
-      All Rights Reserved. Josh Friese, 2017
-    </footer>
 
-</body>
+      <div class='content'>
+        <div class="list-group">
+          <a class="list-group-item" id='home' href="">
+            <i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;
+          </a>
+          <a class="list-group-item" id='work' href="https://github.com/phist210">
+            <i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Works
+          </a>
+          <a class="list-group-item" id='resume' href="#">
+            <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Resume
+            <div id="panel">Hello world!</br>I'll show you more soon!</div>
+          </a>
+          <a class="list-group-item" id='other' href="#">
+            <i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Other
+          </a>
+        </div>
+      </div>
+    </div>
+    <!-- end container -->
+      <div class='footer'>
+        <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
+        <a href="https://www.visitnc.com/raleigh-durham-the-triangle">Triangle Area, NC, United States</a>
+      </div>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      <script src="https://use.fontawesome.com/568731b0b0.js"></script>
+      <script src="scriptin.js" type="text/javascript"></script>
+  </body>
 
 </html>
