--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Josh Friese - Typist</title>
     <link rel="stylesheet" href='style.css'/>
     <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
-    <link href='http://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'><a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'><a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
   </head>
 
   <body>
