--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <title>Josh Friese - Typist</title>
     <link rel="stylesheet" href='style.css'/>
     <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
-    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'><a href="javascript:" id="return-to-top"><i class="icon-chevron-up"></i></a>
+    <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
+    <!-- Webcomponents (cross-browser polyfill) -->
+    <!-- Awesome Button -->
+    <link async rel="import" href="https://raw.githubusercontent.com/rcaferati/awesome-button/master/awesome-button.html"/>
+
   </head>
 
   <body>
@@ -13,25 +18,36 @@
     <div class='container'>
 
       <div class='main'>
-        <a href='/'><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
+        <a href="javascript:alert('Hello World!');"><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
           <p class='title'>Need development?</p>
         <p style='text-indent: 1em;'>
-          My name is Josh Friese. I like typing, headbanging and all things hoppy. </br></br>
-          Check me out!
+          Welcome! My name is <span id='name'>Josh Friese</span>.<p> I am very enthusiastic about problem solving, learning new technologies, headbanging and all things hoppy.</p>
         </p>
       </div>
 
       <div class='content'>
         <div class="list-group">
-          <a class="list-group-item" id='home' href="">
+          <a class="list-group-item" id='home' href="#home">
             <i class="fa fa-home fa-fw" aria-hidden="true"></i>&nbsp;
           </a>
-          <a class="list-group-item" id='work' href="https://github.com/phist210">
-            <i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Works
+          <a class="list-group-item" id='work' href="#work">
+            <i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Résumé
+            <div id='work' class="panel">
+              <object data="resume.pdf" type="application/pdf" width="500px" height="700px">
+                  <embed src="resume.pdf">
+                      This browser does not support PDFs. Please download the PDF to view it: <a href="http://yoursite.com/the.pdf">Download PDF</a>.</p>
+                  </embed>
+              </object>
+            </div>
           </a>
-          <a class="list-group-item" id='resume' href="#">
-            <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Resume
-            <div id="panel">Hello world!</br>I'll show you more soon!</div>
+          <a class="list-group-item" id='connect' href="#connect">
+            <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Connect
+            <div id='connect' class="panel">
+              <awesome-button type="linkedin" href="https://www.linkedin.com/in/joshua-friese-1aa13990/"></awesome-button>
+              <awesome-button type="twitter" href="http://twitter.com/jawshology/"></awesome-button>
+              <awesome-button type="github" href="http://github.com/phist210/"></awesome-button>
+              <awesome-button type="mail" href="mailto:josh.frese@gmail.com"></awesome-button>
+            </div>
           </a>
           <a class="list-group-item" id='other' href="#">
             <i class="fa fa-cog fa-fw" aria-hidden="true"></i>&nbsp; Other
@@ -44,6 +60,7 @@
         <i class="fa fa-globe fa-2x" aria-hidden="true"></i>
         <a href="https://www.visitnc.com/raleigh-durham-the-triangle">Triangle Area, NC, United States</a>
       </div>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.6.0/webcomponents.min.js"></script>
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
       <script src="https://use.fontawesome.com/568731b0b0.js"></script>
       <script src="scriptin.js" type="text/javascript"></script>
