added resume.pdf, implementing pdf view on index.html

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="owner" content="Joshua Friese">
+    <meta name="author" content="Joshua Friese, josh.friese@gmail.com">
     <title>Josh Friese - Typist</title>
     <link rel="stylesheet" href='style.css'/>
     <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
@@ -21,7 +23,8 @@
         <a href="javascript:alert('Hello World!');"><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
           <p class='title'>Need development?</p>
         <p style='text-indent: 1em;'>
-          Welcome! My name is <span id='name'>Josh Friese</span>.<p> I am very enthusiastic about problem solving, learning new technologies, headbanging and all things hoppy.</p>
+          Welcome! My name is <span id='name'>Josh Friese</span>.
+          <p>I am very enthusiastic about problem solving, learning new technologies, headbanging and all things hoppy.</p>
         </p>
       </div>
 
@@ -35,7 +38,7 @@
             <div id='work' class="panel">
               <object data="resume.pdf" type="application/pdf" width="500px" height="700px">
                   <embed src="resume.pdf">
-                      This browser does not support PDFs. Please download the PDF to view it: <a href="http://yoursite.com/the.pdf">Download PDF</a>.</p>
+                      This browser does not support PDFs. Please download the PDF to view it: <a href="/resume.pdf">Download PDF</a>.</p>
                   </embed>
               </object>
             </div>
