added logo as favicon, changed background

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content='Icons thanks to http://fontawesome.io, buttons thanks to Rafael Caferati (http://caferati.me)'>
     <title>Josh Friese - Typist</title>
     <link rel="stylesheet" href='style.css'/>
-    <link rel="shortcut icon" type="image/png" href="https://www.iconexperience.com/_img/g_collection_png/standard/16x16/hand_fist.png"/>
+    <link rel="shortcut icon" type="image/png" href="jf_logo_green.png"/>
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet'>
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
     <link async rel="import" href="https://raw.githubusercontent.com/rcaferati/awesome-button/master/awesome-button.html"/>
