added desk_bg1.jpg as background image, my desk is tite

--- a/index.html
+++ b/index.html
@@ -22,8 +22,11 @@
         <a href=""><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
           <p class='title'>Need development?</p>
         <p style='text-indent: 1em;'>
-          Welcome! My name is <span id='name'>Josh Friese</span> and...
-          <p>I am very enthusiastic about problem solving, headbanging and a sunny, open field with my dog, <a href='adidog.jpg'>Atlas. 🐶</a></p>
+          I'd be happy to help! My name is <span id='name'>Josh Friese</span> and...
+          <p>
+            I am very enthusiastic about problem solving, headbanging
+            and a sunny, open field with my dog, <a href='adidog.jpg'>Atlas. 🐶</a>
+          </p>
         </p>
       </div>
       <!-- content menu -->
