implemented dynamic viewport width, some whitespace wrapping and renamed resume pdf

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="owner" content="Joshua Friese">
     <meta name="author" content="Joshua Friese, josh.friese@gmail.com">
     <meta name="description" content='Icons thanks to http://fontawesome.io, buttons thanks to Rafael Caferati (http://caferati.me)'>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josh Friese - Typist</title>
     <link rel="stylesheet" href='style.css'/>
     <link rel="shortcut icon" type="image/png" href="jf_logo_green.png"/>
@@ -20,8 +21,8 @@
       <!-- picture and headline -->
       <div class='main'>
         <a href=""><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
-          <p class='title'>Need development?</p>
-        <p style='text-indent: 1em;'>
+          <p class='title'>Need&nbsp;development?</p>
+        <p class='bio'>
           I'd be happy to help! My name is <span id='name'>Josh Friese</span> and...
           <p>
             I am very enthusiastic about problem solving, headbanging
@@ -35,10 +36,11 @@
           <a class="list-group-item" id='work' href="#content">
             <i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Résumé
             <div id='work' class="panel">
-              <object data="resume.pdf" type="application/pdf" width="400px" height="700px">
-                  <embed src="resume.pdf">
-                      This browser does not support PDFs. Please follow this link to view or download this PDF: <a href="resume.pdf">Download PDF</a>.</p>
+              <object class='resume' data="joshfriese_resume.pdf" type="application/pdf" width='100%' height='400vmin'>
+                  <embed class='resume' src="joshfriese_resume.pdf">
+                      This browser does not support PDFs. Please follow this link to view or download this PDF:</br>
                   </embed>
+                  <a target='_blank' href="joshfriese_resume.pdf">Open in new tab.</a><p>
               </object>
             </div>
           </a>
