fit the body to the window

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <a class="list-group-item" id='connect' href="#content">
             <i class="fa fa-pencil fa-fw" aria-hidden="true"></i>&nbsp; Contact and connect
             <div id='connect' class="panel">
-              <awesome-button type="linkedin" href="https://www.linkedin.com/in/joshua-friese-1aa13990/"></awesome-button>
+              <awesome-button type="linkedin" href="https://www.linkedin.com/in/joshua-friese/"></awesome-button>
               <awesome-button type="twitter" href="http://twitter.com/jawshology/"></awesome-button>
               <awesome-button type="github" href="http://github.com/phist210/"></awesome-button>
               <awesome-button type="mail" href="mailto:josh.frese@gmail.com"></awesome-button>
