--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
           <a class="list-group-item" id='work' href="#content">
             <i class="fa fa-book fa-fw" aria-hidden="true"></i>&nbsp; Résumé
             <div id='work' class="panel">
-              <object class='resume' data="joshfriese_resume.pdf" type="application/pdf" width='100%' height='400vmin'>
-                  <embed class='resume' src="joshfriese_resume.pdf">
+              <object class='resume' data="JoshFrieseResume.pdf" type="application/pdf" width='100%' height='400vmin'>
+                  <embed class='resume' src="JoshFrieseResume.pdf">
                       This browser does not support PDFs. Please follow this link to view or download this PDF:</br>
                   </embed>
-                  <a target='_blank' href="joshfriese_resume.pdf">Open in new tab.</a><p>
+                  <a target='_blank' href="JoshFrieseResume.pdf">Open in new tab.</a><p>
               </object>
             </div>
           </a>
