--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class='container'>
       <!-- picture and headline -->
       <div class='main'>
-        <a href=""><img class='pic' title='I went to Santa Cruz, CA, once.' src="http://i.imgur.com/V9RhRkm.jpg"/></a>
+        <a href=""><img class='pic' title='I went to Santa Cruz, CA, once.' src="https://i.imgur.com/V9RhRkm.jpg"/></a>
           <p class='title'>Need&nbsp;development?</p>
         <p class='bio'>
           I'd be happy to help!</br>My name is <span id='name'>Josh Friese</span> and...
