added content to Other, updated resume.pdf

--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
     <div class='container'>
       <!-- picture and headline -->
       <div class='main'>
-        <a href=""><img class='pic' title='I went to Santa Cruz, CA, once.' src="https://i.imgur.com/V9RhRkm.jpg"/></a>
-          <p class='title'>Need&nbsp;development?</p>
+        <a href="">
+          <img class='pic' title='I went to Santa Cruz, CA, once.' src="https://i.imgur.com/V9RhRkm.jpg"/>
+        </a>
+        <p class='title'>Need&nbsp;development?</p>
         <p class='bio'>
           I'd be happy to help!</br>My name is <span id='name'>Josh Friese</span> and...
           <p>
             I am very enthusiastic about problem solving, headbanging
-            and a sunny, open field with my dog, <a id='atlas' href='adidog.jpg'>Atlas. 🐶</a>
+            and</br> sunny, open field with my dog, <a id='atlas' href='adidog.jpg'>Atlas. 🐶</a>
           </p>
         </p>
       </div>
