added content to Menu

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           I'd be happy to help!</br>My name is <span id='name'>Josh Friese</span> and...
           <p>
             I am very enthusiastic about problem solving, headbanging
-            and</br> sunny, open field with my dog, <a id='atlas' href='adidog.jpg'>Atlas. 🐶</a>
+            and</br> sunny, open fields with my dog, <a id='atlas' href='adidog.jpg'>Atlas. 🐶</a>
           </p>
         </p>
       </div>
