--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
     <link async rel='import' href='https://raw.githubusercontent.com/rcaferati/awesome-button/master/awesome-button.html' />
     <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css' />
-    <link rel='stylesheet' href='assets/css/style.css' />
     <link rel='stylesheet' href='assets/css/fontawesome-pro-solid.css'>
     <link rel='stylesheet' href='assets/css/fontawesome-pro-core.css'>
+    <link rel='stylesheet' href='assets/css/style1.css' />
     <link rel='shortcut icon' type='image/png' href='assets/images/jf_logo_green.png' />
 
 </head>
@@ -38,35 +38,43 @@
                 </p>
             </p>
         </div>
-        <!-- content menu -->
-        <div class='content'>
-            <div class='list-group'>
-                <a class='list-group-item' id='work' href='#content'>
+
+        <div class="material-tabs">
+            <div class="tabbed-section__selector">
+                <a class="tabbed-section__selector-tab-1" href="#">
+                    <i class='fa fa-pencil fa-fw' aria-hidden='true'></i>&nbsp; Connect
+                </a>
+                <a class="tabbed-section__selector-tab-2" href="#">
                     <i class='fa fa-address-card'></i>&nbsp; Résumé
-                    <div id='work' class='panel'>
-                        <object class='resume' data='assets/JoshFrieseResume.pdf' type='application/pdf' width='100%' height='400vmin'>
-              <embed class='resume' src='assets/JoshFrieseResume.pdf'> This browser does not support PDFs. Please follow this link to view or download this PDF:</br>
-              </embed>
-              <a target='_blank' href='assets/JoshFrieseResume.pdf'>Open in new tab.</a>
-              <p>
-            </object>
-                    </div>
                 </a>
-                <a class='list-group-item' id='connect' href='#content'>
-                    <i class='fa fa-pencil fa-fw' aria-hidden='true'></i>&nbsp; Contact and connect
-                    <div id='connect' class='panel'>
-                        <awesome-button type='linkedin' href='https://www.linkedin.com/in/joshua-friese/'></awesome-button>
-                        <awesome-button type='twitter' href='http://twitter.com/jawshology/'></awesome-button>
-                        <awesome-button type='github' href='http://github.com/phist210/'></awesome-button>
-                        <awesome-button type='mail' href='mailto:josh.frese@gmail.com'></awesome-button>
-                    </div>
-                </a>
-                <a class='list-group-item' id='open-modal' data-modal-id='popup' href='#other'>
+                <a class="tabbed-section__selector-tab-3" href="#">
                     <i class='fa fa-cog fa-fw' aria-hidden='true'></i>&nbsp; Other
                 </a>
+
+                <span class="tabbed-section__highlighter"></span>
+            </div>
+            <div class="tabbed-section-1 visible">
+                <awesome-button type='linkedin' href='https://www.linkedin.com/in/joshua-friese/'></awesome-button>
+                <awesome-button type='twitter' href='http://twitter.com/jawshology/'></awesome-button>
+                <awesome-button type='github' href='http://github.com/phist210/'></awesome-button>
+                <awesome-button type='mail' href='mailto:josh.frese@gmail.com'></awesome-button>
+            </div>
+            <div class="tabbed-section-2 hidden">
+                <object class='resume' data='assets/JoshFrieseResume.pdf' type='application/pdf' width='100%' height='400vmin'>
+                  <embed class='resume' src='assets/JoshFrieseResume.pdf'>
+                    This browser does not support PDFs. Please follow this link to view or download this PDF:</br>
+                  </embed>
+                  <a target='_blank' href='assets/JoshFrieseResume.pdf'>Open in new tab.</a>
+                </object>
+            </div>
+            <div class="tabbed-section-3 hidden">
+                <p>Coming soon!</p>
+                <img src="http://thecatapi.com/api/images/get?format=src&type=gif" alt="http://thecatapi.com/api/images/get?format=src&type=gif" />
             </div>
         </div>
+
     </div>
+
     <!-- end container -->
     <div class='footer'>
         <a href='https://www.visitnc.com/raleigh-durham-the-triangle'>
@@ -74,9 +82,11 @@
         </a>
         Triangle Area, NC, United States
     </div>
-    <script src='https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.6.0/webcomponents.min.js'></script>
-    <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-    <script src='https://code.jquery.com/ui/1.12.1/jquery-ui.js'></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.20/webcomponents-hi.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
+
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
     <script src='assets/js/scriptin.js' type='text/javascript'></script>
 </body>
 
