Secured gif link, updated cdn links

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             </div>
             <div class="tabbed-section-3 hidden">
                 <p>Coming soon!</p>
-                <img src="http://thecatapi.com/api/images/get?format=src&type=gif" alt="http://thecatapi.com/api/images/get?format=src&type=gif" />
+                <img src="https://thecatapi.com/api/images/get?format=src&type=gif" alt="https://thecatapi.com/api/images/get?format=src&type=gif" />
             </div>
         </div>
 
@@ -83,10 +83,10 @@
         Triangle Area, NC, United States
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.20/webcomponents-hi.js"></script>
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha256-k2WSCIexGzOj3Euiig+TlR8gA0EmPjuc79OEeY5L45g=" crossorigin="anonymous"></script>
-
-    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js" integrity="sha256-eGE6blurk5sHj+rmkfsGYeKyZx3M4bG+ZlFyA7Kns7E=" crossorigin="anonymous"></script>
+    <script src="https://polygit.org/components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.20/webcomponents-loader.js"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src='assets/js/scriptin.js' type='text/javascript'></script>
 </body>
 
