--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <meta charset='utf-8'>
     <meta name='owner' content='Joshua Friese' />
     <meta name='author' content='Joshua Friese, josh.friese@gmail.com' />
-    <meta name='description' content='Icons thanks to http://fontawesome.io, buttons thanks to Rafael Caferati (http://caferati.me)' />
+    <meta name='description' content='Icons thanks to http://fontawesome.io' />
     <meta name='viewport' content='width=device-width, initial-scale=1.0'>
     <link href='https://fonts.googleapis.com/css?family=Advent Pro' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css' />
-    <link async rel='import' href='https://raw.githubusercontent.com/rcaferati/awesome-button/master/awesome-button.html' />
     <link rel='stylesheet' href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css' />
     <link rel='stylesheet' href='assets/css/fontawesome-pro-solid.css'>
     <link rel='stylesheet' href='assets/css/fontawesome-pro-core.css'>
     <link rel='stylesheet' href='assets/css/style1.css' />
     <link rel='shortcut icon' type='image/png' href='assets/images/jf_logo_green.png' />
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.7.3/webcomponents.min.js"></script>
 
 </head>
 
@@ -54,10 +54,19 @@
                 <span class="tabbed-section__highlighter"></span>
             </div>
             <div class="tabbed-section-1 visible">
-                <awesome-button type='linkedin' href='https://www.linkedin.com/in/joshua-friese/'></awesome-button>
-                <awesome-button type='twitter' href='http://twitter.com/jawshology/'></awesome-button>
-                <awesome-button type='github' href='http://github.com/phist210/'></awesome-button>
-                <awesome-button type='mail' href='mailto:josh.frese@gmail.com'></awesome-button>
+                Under contruction...
+                <a class='buttons linkedin' href='https://www.linkedin.com/in/joshua-friese/'>
+                    <i class='fa fa-linkedin'></i>
+                </a>&nbsp;
+                <a class='buttons twitter' href='http://twitter.com/jawshology/'>
+                    <i class='fa fa-twitter-square'></i>
+                </a>&nbsp;
+                <a class='buttons github' href='http://github.com/phist210/'>
+                    <i class='fa fa-location-arrow'></i>
+                </a>&nbsp;
+                <a class='buttons mail' href='mailto:josh.frese@gmail.com'>
+                    <i class='fa fa-envelope'></i>
+                </a>
             </div>
             <div class="tabbed-section-2 hidden">
                 <object class='resume' data='assets/JoshFrieseResume.pdf' type='application/pdf' width='100%' height='400vmin'>
@@ -83,8 +92,6 @@
         Triangle Area, NC, United States
     </div>
 
-    <script src="https://polygit.org/components/webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/1.0.20/webcomponents-loader.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
     <script src='assets/js/scriptin.js' type='text/javascript'></script>
