--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 <body id="top" class="scrollspy">
 
     <!-- Return to top -->
-    <a href="javascript:" id="return-to-top"><i class="fa fa-chevron-up"></i></a>
+    <a href="javascript:" id="return-to-top">
+        <i class="fa fa-chevron-up"></i>
+    </a>
 
     <!-- Pre Loader -->
     <div id="loader-wrapper">
@@ -166,7 +168,7 @@
                             <span class="card-title grey-text text-darken-4">Masterpeace
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                            <p>Under construction...</p>
                         </div>
                     </div>
                 </div>
@@ -187,7 +189,7 @@
                             <span class="card-title grey-text text-darken-4">Question Box
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                            <p>Under construction...</p>
                         </div>
                     </div>
                 </div>
@@ -208,7 +210,7 @@
                             <span class="card-title grey-text text-darken-4">Kanban Board
                                 <i class="mdi-navigation-close right"></i>
                             </span>
-                            <p>Here is some more information about this project that is only revealed once clicked on.</p>
+                            <p>Under construction...</p>
                         </div>
                     </div>
                 </div>
@@ -222,22 +224,10 @@
             <img width=300 height=800 src="assets/img/studio.jpg">
         </div>
     </div>
-
-    <!--Team-->
-    <div class="section scrollspy" id="contact">
-        <div class="container">
-            <h2 class="header text_b"> Get Connected </h2>
-            <div class="row">
-                <div class="col s12 m3">
-
-                </div>
-            </div>
-        </div>
-    </div>
-
     <!--Footer-->
-    <footer id="contact" class="page-footer default_color scrollspy">
+    <footer class="page-footer default_color scrollspy">
         <div class="container">
+            <h2 class="header text_h scrollspy" id="contact"> Get Connected </h2>
             <div class="row">
                 <div class="col l6 s12">
                     <form class="col s12" action="assets/contact.php" method="post">
@@ -266,17 +256,6 @@
                     </form>
                 </div>
                 <div class="col l3 s12">
-                    <h5 class="white-text">phist210.github.io</h5>
-                    <ul>
-                        <li>
-                            <a class="white-text" href="/">Home</a>
-                        </li>
-                        <li>
-                            <a class="white-text" href="/blog">Blog</a>
-                        </li>
-                    </ul>
-                </div>
-                <div class="col l3 s12">
                     <h5 class="white-text">Social</h5>
                     <ul>
                         <li>
@@ -299,6 +278,17 @@
                             <a class="white-text" href="https://www.soundcloud.com/phistmusic">
                                 <i class="small fa fa-soundcloud white-text"></i> Soundcloud
                             </a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="col l3 s12">
+                    <h5 class="white-text">phist210.github.io</h5>
+                    <ul>
+                        <li>
+                            <a class="white-text" href="/">Home</a>
+                        </li>
+                        <li>
+                            <a class="white-text" href="/blog">Blog</a>
                         </li>
                     </ul>
                 </div>
